<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="store_listing_short_description" tools:ignore="UnusedResources">"OpenStreetMap surveyor app"</string>
    <string name="store_listing_full_description" tools:ignore="UnusedResources">"Help improve OpenStreetMap with AVIV ScoutRoute!

This app finds missing map data in your vicinity and displays it on a map as quests. Solve each quest by visiting the location on-site and answering a simple question to update the map.

The info you enter is directly added to OpenStreetMap in your name, without the need to use another editor."</string>
    <string name="action_about2">"About"</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_overlays">"Overlays"</string>
    <string name="user_profile">My Profile</string>
    <string name="team_mode">Enter Team Mode</string>
    <string name="action_download">"Download data here"</string>
    <string name="switch_workspace">"Switch workspace"</string>
    <string name="cannot_find_bbox_or_reduce_tilt">"Can’t download here. Try to zoom in further or tilt the map less."</string>
    <string name="download_area_too_big">"Please zoom in further"</string>
    <string name="confirmation_cancel_prev_download_title">"Stop the current download and download here instead?"</string>
    <string name="confirmation_cancel_prev_download_confirmed">"Download here instead"</string>
    <string name="confirmation_cancel_prev_download_cancel">"Continue current download"</string>
    <string name="map_btn_zoom_out">"Zoom out"</string>
    <string name="map_btn_zoom_in">"Zoom in"</string>
    <string name="map_btn_menu">"Menu"</string>
    <string name="map_btn_gps_tracking">"Follow me"</string>
    <string name="turn_on_location_request">"Location is off. Open Settings to turn it on now?"</string>
    <string name="no_location_permission_warning_title">"Location Permission"</string>
    <string name="no_location_permission_warning">"Location permission is needed to show your position on the map and download data in your vicinity."</string>
    <string name="map_attribution_osm">"© OpenStreetMap contributors"</string>
    <string name="open_url">Open URL</string>
    <string name="action_undo">Undo</string>
    <string name="action_upload">"Upload answers"</string>
    <string name="action_open_location">Open location in another app</string>
    <string name="map_application_missing">No other map application installed</string>
    <string name="map_btn_create_note">Create new note</string>
    <string name="create_new_note_unprecise">Zoom in further to create a note</string>
    <string name="create_new_note_description">You can leave a note to let other mappers know about an issue here. Adjust the note’s position by moving the map.</string>
    <string name="create_new_note_hint">Ideally, write in the local language, or otherwise in English.</string>
    <string name="map_btn_create_track">Create new track recording</string>
    <string name="map_btn_stop_track">"Stop recording track"</string>
    <string name="map_btn_create_node">Add new feature</string>
    <string name="notification_channel_sync">"Sync Data"</string>
    <string name="notification_syncing">"Syncing data…"</string>
    <string name="quest_generic_hasFeature_yes">"Yes"</string>
    <string name="quest_generic_hasFeature_no">"No"</string>
    <string name="quest_generic_hasFeature_optional">"Optionally"</string>
    <string name="quest_hasFeature_only">Only</string>
    <string name="quest_generic_hasFeature_no_leave_note">"No (leave note)"</string>
    <string name="quest_generic_hasFeature_yes_leave_note">"Yes (leave note)"</string>
    <string name="quest_generic_confirmation_title">"Are you sure?"</string>
    <string name="quest_generic_confirmation_yes">"Yes, I am sure"</string>
    <string name="quest_generic_confirmation_no">"I will check"</string>
    <string name="quest_generic_answer_noSign">There is no sign</string>
    <string name="quest_generic_answer_is_actually_steps">"These are steps"</string>
    <string name="quest_generic_answer_is_indoors">"This is indoors"</string>
    <string name="quest_roofShape_select_one">"Select one:"</string>
    <string name="quest_multiselect_hint">"Select all that apply:"</string>
    <string name="quest_select_hint">"Select:"</string>
    <string name="quest_roofShape_show_more">"Show more…"</string>
    <string name="quest_generic_looks_like_this">Usually looks like this:</string>
    <string name="quest_generic_item_confirmation">Are you sure that you can not determine it more specifically?</string>
    <string name="quest_street_side_puzzle_tutorial">The road in the illustration is rotated the same as on the map at its center pin location. Try rotating the map and you’ll get it.</string>
    <string name="quest_arrow_tutorial">The arrows in the illustration point towards the directions in which the way runs on the map at its center pin location. Try rotating the map and you’ll get it.</string>
    <string name="default_disabled_msg_go_inside">This quest type is disabled by default because you will likely have to enter the place to be able to answer a quest of this type.</string>
    <string name="default_disabled_msg_go_inside_regional_warning">This quest type is disabled by default because it is not useful in some regions and you will likely have to enter the place to be able to answer a quest of this type.</string>
    <string name="default_disabled_msg_no_ar">You need a tape measure to solve this quest because measuring with the camera is not supported on this device.</string>
    <string name="default_disabled_msg_difficult_and_time_consuming">This quest type is disabled by default because it is either time-consuming or difficult to make the right choice. Only enable this quest type if you are really committed to adding this kind of data.</string>
    <string name="default_disabled_msg_overlay">This quest type is disabled by default because there is already an overlay with which it is more effective and efficient to enter and update this data.</string>
    <string name="default_disabled_msg_seasonal">"This quest type is disabled by default because it may require re-checking the situation at different times of the year."</string>
    <string name="on_level">on level %s</string>
    <string name="on_floor">on floor %s</string>
    <string name="underground">underground</string>
    <string name="at_housename">house name %s</string>
    <string name="at_housenumber">house number %s</string>
    <string name="inside">inside</string>
    <string name="outside">outside</string>
    <string name="no_changes">"You did not give an answer"</string>
    <string name="info">"More information"</string>
    <string name="close_button">Close</string>
    <string name="close_image">Close image</string>
    <string name="confirmation_hide_quest">"Are you sure you want to hide this quest?"</string>
    <string name="confirmation_hide_quest_yes">"Yes"</string>
    <string name="confirmation_discard_title">"Discard input?"</string>
    <string name="confirmation_discard_positive">"Discard"</string>
    <string name="short_no_answer_on_button">No</string>
    <string name="quest_leave_new_note_title">"Leave a note instead?"</string>
    <string name="quest_leave_new_note_description">"You can leave a public note for other mappers to resolve at this location, or hide this quest for yourself only"</string>
    <string name="quest_leave_new_note_yes">"Leave note"</string>
    <string name="quest_leave_new_note_no">"Hide"</string>
    <string name="quest_leave_new_note_as_answer">In this case, you need to leave a note in which you explain the situation.</string>
    <string name="quest_generic_otherAnswers">"Other answers…"</string>
    <string name="quest_generic_otherAnswers2">"Uh…"</string>
    <string name="quest_generic_answer_notApplicable">"Can’t say…"</string>
    <string name="quest_generic_answer_does_not_exist">It does not exist…</string>
    <string name="osm_element_gone_description">"Are you sure that it does not exist, not even at a slightly different location? If you’re not sure, leave a note instead.</string>
    <string name="osm_element_gone_confirmation">It does not exist</string>
    <string name="leave_note">Leave note</string>
    <string name="quest_generic_answer_differs_along_the_way">"Differs along the way…"</string>
    <string name="quest_split_way_description">If it differs along the way, the first step is to split up the way. After that, the quest can be answered for each part separately.\nSplit it now?</string>
    <string name="quest_split_way_tutorial">Tap on the way to split it at the point(s) where the answer differs. Use the zoom function and try to be as precise as possible.</string>
    <string name="quest_split_way_too_imprecise">"Please zoom in further"</string>
    <string name="quest_split_way_many_splits_confirmation_description">These are quite a few splits. You can always further split up the way later.</string>
    <string name="split_way">Split way</string>
    <string name="move_node">It’s at a slightly different position…</string>
    <string name="quest_move_node_message">You can correct the position by moving the feature.\nMove it now?</string>
    <string name="node_moved_not_far_enough">Please move it further</string>
    <string name="node_moved_too_far">Moved too far. Consider leaving a note</string>
    <string name="node_moved">Moved by %s</string>
    <string name="move_node_description">Drag the map to place the feature at the correct position. Use the zoom function and try to be as precise as possible. Please be aware that your displayed location may be less exact than displayed.</string>
    <string name="quest_source_dialog_title">Are you sure you checked this on-site?</string>
    <string name="quest_source_dialog_note">Only information that was verified in-person should be entered.</string>
    <string name="dialog_session_dont_show_again">Don’t show again for this session</string>
    <string name="tutorial_welcome_to_osm">Welcome to OpenStreetMap</string>
    <string name="tutorial_welcome_to_osm_subtitle">the free wiki world map</string>
    <string name="tutorial_intro">AVIV ScoutRoute makes it easy to contribute to OpenStreetMap.\nIt automatically looks for missing details in your vicinity: bicycle lanes, house numbers, opening hours and much more…</string>
    <string name="tutorial_solving_quests">Once found, the missing details will appear on your map as quests.\n\nYou can start solving them right away and later login to publish your answers.</string>
    <string name="tutorial_stay_safe">Whenever you are uncertain, you can always reply “Can’t Say” and leave a note.\n\nFinally, remember to stay safe: Be aware of your surroundings and don’t enter private property.</string>
    <string name="tutorial_happy_mapping">Happy Mapping!</string>
    <string name="next">Next</string>
    <string name="letsgo">Let’s go!</string>
    <string name="overlays_tutorial_title">Overlays</string>
    <string name="overlays_tutorial_intro">"You found a new way to edit data!"</string>
    <string name="overlays_tutorial_display">"Each overlay displays one kind of data, for example “places“ or “street surfaces“.

The data is highlighted in different colors to give you a good overview of what has been recorded so far.
Missing data is always shown in red."</string>
    <string name="compass_icon">compass_icon</string>
    <string name="change_map_layer">Change map layer</string>
    <string name="add_new_feature">Add new feature</string>
    <string name="profile_icon">profile icon</string>
    <string name="workspace">Workspace</string>
</resources>