<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="8dp">

    <!-- Profile & Text -->
    <LinearLayout
        android:id="@+id/left_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- Profile Circle Icon -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/primary"
            android:contentDescription="@string/profile_icon"
            android:padding="8dp"
            android:src="@drawable/ic_profile_48dp"
            android:tint="@color/button_white"
            app:shapeAppearanceOverlay="@style/CircleImageView" />

        <!-- Two lines of text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workspace"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/workspace_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="HTH Redmond" />
        </LinearLayout>
    </LinearLayout>

    <!-- Right Side Icons -->
    <LinearLayout
        android:id="@+id/right_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/left_section"
        android:gravity="center_vertical|end"
        android:orientation="horizontal">

        <de.westnordost.streetcomplete.screens.main.controls.UploadButton
            android:id="@+id/uploadButton"
            style="@style/RoundPurpleButton"
            android:layout_width="@dimen/map_button_size"
            android:layout_height="@dimen/map_button_size"
            android:contentDescription="@string/action_upload"
            app:layout_constraintRight_toLeftOf="@+id/overlaysButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/overlaysButton"
            style="@style/RoundPurpleButton"
            android:layout_width="@dimen/map_button_size"
            android:layout_height="@dimen/map_button_size"
            android:contentDescription="@string/action_overlays"
            android:elevation="4dp"
            android:scaleType="centerInside"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_overlay_black_24dp"
            app:tint="@color/primary" />

        <ImageButton
            android:id="@+id/mainMenuButton"
            style="@style/RoundPurpleButton"
            android:layout_width="@dimen/map_button_size"
            android:layout_height="@dimen/map_button_size"
            android:contentDescription="@string/map_btn_menu"
            android:scaleType="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_24dp"
            app:tint="@color/primary" />

    </LinearLayout>

</RelativeLayout>

