<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapFragment"
        android:name="de.westnordost.streetcomplete.screens.main.map.MainMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_map" />

    <ImageView
        android:id="@+id/crosshairView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.6"
        android:paddingLeft="@dimen/quest_form_leftOffset"
        android:paddingTop="@dimen/quest_form_topOffset"
        android:paddingRight="@dimen/quest_form_rightOffset"
        android:paddingBottom="250dp"
        app:srcCompat="@drawable/crosshair"
        app:tint="@color/monochrome_icon"
        tools:ignore="RtlHardcoded" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mapControls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true"
        tools:ignore="RtlHardcoded">

        <de.westnordost.streetcomplete.screens.main.PointerPinView
            android:id="@+id/locationPointerPin"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:elevation="4dp"
            android:visibility="gone"
            app:iconSrc="@drawable/location_dot_small"
            tools:ignore="MissingConstraints" />

        <de.westnordost.streetcomplete.screens.main.controls.StarsCounterView
            android:id="@+id/starsCounterView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:clipChildren="false"
            android:elevation="4dp"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <!-- note the other compass in quest_street_side_puzzle -->
        <ImageView
            android:id="@+id/compassView"
            android:layout_width="@dimen/map_button_size"
            android:layout_height="@dimen/map_button_size"
            android:background="@drawable/round_white_button"
            android:backgroundTint="@color/button_background"
            android:contentDescription="@string/compass_icon"
            android:elevation="4dp"
            android:padding="14dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_compass_needle_48dp" />

        <ImageButton
            android:id="@+id/stop_tracks_button"
            style="@style/RoundAccentButton"
            android:layout_width="@dimen/map_button_size"
            android:layout_height="@dimen/map_button_size"
            android:contentDescription="@string/map_btn_stop_track"
            android:scaleType="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/gpsTrackingButton"
            app:layout_constraintRight_toLeftOf="@id/gpsTrackingButton"
            app:srcCompat="@drawable/ic_stop_recording_24dp"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/layerChangeButton"
            style="@style/RoundWhiteButton"
            android:layout_width="@dimen/map_button_size"
            android:layout_height="@dimen/map_button_size"
            android:contentDescription="@string/change_map_layer"
            android:scaleType="center"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/zoomInButton"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_layers_24" />

        <ImageButton
            android:id="@+id/zoomInButton"
            style="@style/RoundWhiteButton"
            android:layout_width="@dimen/map_button_size"
            android:layout_height="@dimen/map_button_size"
            android:backgroundTint="@color/button_background"
            android:contentDescription="@string/map_btn_zoom_in"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@id/zoomOutButton"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_add_24dp"
            app:tint="@color/primary" />

        <ImageButton
            android:id="@+id/zoomOutButton"
            style="@style/RoundWhiteButton"
            android:layout_width="@dimen/map_button_size"
            android:layout_height="@dimen/map_button_size"
            android:backgroundTint="@color/button_background"
            android:contentDescription="@string/map_btn_zoom_out"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@id/gpsTrackingButton"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_subtract_24dp"
            app:tint="@color/primary" />

        <de.westnordost.streetcomplete.screens.main.controls.LocationStateButton
            android:id="@+id/gpsTrackingButton"
            style="@style/RoundWhiteButton"
            android:layout_width="@dimen/map_button_size"
            android:layout_height="@dimen/map_button_size"
            android:layout_marginBottom="22dp"
            android:backgroundTint="@color/button_background"
            android:contentDescription="@string/map_btn_gps_tracking"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_location_state_24dp"
            app:tint="@color/primary" />

        <ImageButton
            android:id="@+id/undoButton"
            style="@style/RoundWhiteButton"
            android:layout_width="@dimen/map_button_size"
            android:layout_height="@dimen/map_button_size"
            android:layout_marginBottom="22dp"
            android:backgroundTint="@color/button_background"
            android:contentDescription="@string/action_undo"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/ic_undo_24dp"
            app:tint="@color/primary" />

        <ImageButton
            android:id="@+id/createButton"
            style="@style/RoundAccentButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginBottom="22dp"
            android:contentDescription="@string/add_new_feature"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_add_48dp"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- is a RelativeLayout so that the child layout can, if it is not matching parent, use layout_alignParent* -->
    <RelativeLayout
        android:id="@+id/edit_history_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="0dp" />

    <View
        android:id="@+id/contextMenuView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:ignore="MissingConstraints" />

    <!-- is a RelativeLayout so that the child layout can, if it is not matching parent, use layout_alignParent* -->
    <!-- set height to 80% -->
    <RelativeLayout
        android:id="@+id/map_bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:clipChildren="false" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>
